--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=kKID92"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=kKID92" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=ja49Ep"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=ja49Ep" type="text/css">
 
   
   
@@ -75,7 +75,7 @@
         <div class="justify-content-center row">
             <div class="media-container-column title col-12 col-md-10">
                 <h2 class="align-right mbr-bold mbr-white pb-3 mbr-fonts-style display-2">
-                    PAVAN VIVETTI</h2>
+                    PAVAN VOVETTI</h2>
                 <p class="mbr-text align-right mbr-white mbr-fonts-style display-7">
                     Principal Security Engineer | API Security Specialist | Technology Enthusiast.<br></p>
                 <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="https://mobirise.co">LEARN MORE</a></div>
