--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=ja49Ep"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=ja49Ep" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=r1PmVk"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=r1PmVk" type="text/css">
 
   
   
@@ -35,7 +35,7 @@
   <section data-bs-version="5.1" class="menu menu6 cid-utdWlxmIul" once="menu" id="menu06-1l">
 	
 
-	<nav class="navbar navbar-dropdown opacityScroll navbar-fixed-top navbar-expand-lg">
+	<nav class="navbar navbar-dropdown opacityScroll navbar-expand-lg">
 		<div class="container">
 			<div class="navbar-brand">
 				
@@ -54,7 +54,7 @@
 						<a class="nav-link link text-primary display-4" href="index.html#design-block-SSPQS7USRj">Home</a>
 					</li><li class="nav-item dropdown"><a class="nav-link link text-primary dropdown-toggle display-4" href="about.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">About</a><div class="dropdown-menu" aria-labelledby="dropdown-214"><a class="text-primary show dropdown-item display-4" href="about.html#About-Me">About Me</a><a class="text-primary dropdown-item display-4" href="about.html#biography">Biography<br></a><a class="text-primary show dropdown-item display-4" href="about.html#Professional_Timeline">Professional Timeline<br></a><a class="text-primary show dropdown-item display-4" href="about.html#Top-Skills">Top Skills<br></a></div></li>
 					<li class="nav-item dropdown">
-						<a class="nav-link link text-primary dropdown-toggle display-4" href="achievement.html" aria-expanded="false" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside">Achievements</a><div class="dropdown-menu" aria-labelledby="dropdown-325"><a class="text-primary show dropdown-item display-4" href="achievement.html#Achievements">Achievements</a><a class="text-primary show dropdown-item display-4" href="achievement.html#Certifications-&-Memberships">Certifications &amp; Memberships</a><a class="text-primary show dropdown-item display-4" href="achievement.html#Publications-&-Contributions-">Publications &amp; Contributions </a><a class="text-primary show dropdown-item display-4" href="achievement.html#Volunteer-Work">Volunteer Work</a></div>
+						<a class="nav-link link text-primary dropdown-toggle display-4" href="achievement.html" aria-expanded="false" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside">Achievements</a><div class="dropdown-menu" aria-labelledby="dropdown-325"><a class="text-primary show dropdown-item display-4" href="achievement.html#header19-1w">Achievements</a><a class="text-primary show dropdown-item display-4" href="achievement.html#Certifications-&-Memberships">Certifications &amp; Memberships</a><a class="text-primary show dropdown-item display-4" href="achievement.html#Publications-&-Contributions-">Publications &amp; Contributions </a><a class="text-primary show dropdown-item display-4" href="achievement.html#Volunteer-Work">Volunteer Work</a></div>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link link text-primary display-4" href="blog.html">Blog</a>
@@ -75,7 +75,7 @@
         <div class="justify-content-center row">
             <div class="media-container-column title col-12 col-md-10">
                 <h2 class="align-right mbr-bold mbr-white pb-3 mbr-fonts-style display-2">
-                    PAVAN VOVETTI</h2>
+                    PAVAN VOVVETI</h2>
                 <p class="mbr-text align-right mbr-white mbr-fonts-style display-7">
                     Principal Security Engineer | API Security Specialist | Technology Enthusiast.<br></p>
                 <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="https://mobirise.co">LEARN MORE</a></div>
