--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=GHcC2G"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=GHcC2G" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=P4w1Rv"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=P4w1Rv" type="text/css">
 
   
   
@@ -54,7 +54,7 @@
 						<a class="nav-link link text-primary display-4" href="index.html#design-block-SSPQS7USRj">Home</a>
 					</li><li class="nav-item dropdown"><a class="nav-link link text-primary dropdown-toggle display-4" href="about.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">About</a><div class="dropdown-menu" aria-labelledby="dropdown-214"><a class="text-primary show dropdown-item display-4" href="about.html#About-Me">About Me</a><a class="text-primary dropdown-item display-4" href="about.html#biography">Biography<br></a><a class="text-primary show dropdown-item display-4" href="about.html#Professional_Timeline">Professional Timeline<br></a><a class="text-primary show dropdown-item display-4" href="about.html#Top-Skills">Top Skills<br></a></div></li>
 					<li class="nav-item dropdown">
-						<a class="nav-link link text-primary dropdown-toggle display-4" href="achievement.html" aria-expanded="false" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside">Achievements</a><div class="dropdown-menu" aria-labelledby="dropdown-325"><a class="text-primary show dropdown-item display-4" href="achievement.html#Achievements">Achievements</a><a class="text-primary show dropdown-item display-4" href="achievement.html#Certifications-&-Memberships">Certifications &amp; Memberships</a><a class="text-primary show dropdown-item display-4" href="achievement.html#Publications-&-Contributions-">Publications &amp; Contributions </a><a class="text-primary show dropdown-item display-4" href="achievement.html#Volunteer-Work">Volunteer Work</a></div>
+						<a class="nav-link link text-primary dropdown-toggle display-4" href="achievement.html" aria-expanded="false" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside">Achievements</a><div class="dropdown-menu" aria-labelledby="dropdown-325"><a class="text-primary show dropdown-item display-4" href="achievement.html#header19-1w">Achievements</a><a class="text-primary show dropdown-item display-4" href="achievement.html#Certifications-&-Memberships">Certifications &amp; Memberships</a><a class="text-primary show dropdown-item display-4" href="achievement.html#Publications-&-Contributions-">Publications &amp; Contributions </a><a class="text-primary show dropdown-item display-4" href="achievement.html#Volunteer-Work">Volunteer Work</a></div>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link link text-primary display-4" href="blog.html">Blog</a>
@@ -94,12 +94,11 @@
             <div class="col-12 col-lg item-wrapper">
                 <div class="mbr-section-head mb-5">
                     <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
-                        <strong>Contact us</strong>
-                    </h3>
+                        <strong>Contact Me</strong></h3>
                     
                 </div>
                 <div class="col-lg-12 mx-auto mbr-form" data-form-type="formoid">
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="2zSpikfnv4kmjEcIKtl53ktUDXlxR2sch6lJVEv0aLMUKdZFxl4rO8QLdtzc0GDeQ4r93RCaY0CbCpFcf4bIFLj6xxTduLXUpApcISRQKkaxJoJnfQVvIz01zyzzki1e">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="FGF1/dmC5ycCM7qNclIExArhQaknDXvGLim62QKlqiDargztJtA3/NQ8ETfyW9fk/64YGpuPJ7jvlWLkMUeI9+dSewJ93gtXLlZDZl/xogjejJEZ/3N8U4cD+3Ytv/vC">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -119,11 +118,9 @@
                             <div class="col-12 form-group mb-3 mb-3" data-for="textarea">
                                 <textarea name="textarea" placeholder="Message" data-form-field="textarea" class="form-control" id="textarea-form03-28"></textarea>
                             </div>
-                            <div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn">
-                                <button type="submit" class="btn btn-primary display-7">
+                            <div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn"><button type="submit" class="btn btn-primary display-7">
                                     Send message
-                                </button>
-                            </div>
+                                </button></div>
                         </div>
                     <span class="gdpr-block">
 <label>
